Adding special unicode characters to print template

--- a/templates/concept_print/base/concept_print.tex.twig
+++ b/templates/concept_print/base/concept_print.tex.twig
@@ -79,6 +79,9 @@
 
   % Declare common unicode characters
   \DeclareUnicodeCharacter{200B}{}
+  \DeclareUnicodeCharacter{03BC}{}
+  \DeclareUnicodeCharacter{03C3}{}
+  \DeclareUnicodeCharacter{03B8}{}
   \DeclareUnicodeCharacter{FB01}{fi}
   \DeclareUnicodeCharacter{2011}{-}
 
