--- a/templates/default/dashboard.html.twig
+++ b/templates/default/dashboard.html.twig
@@ -126,10 +126,10 @@
     {% endif %}
     {% if not studyArea.openAccess or tagCount > 0 %}
       <li>
-        {% if is_granted("STUDYAREA_OWNER", _twigStudyArea) and tagCount > 0 %}<a
+        {% if tagCount > 0 %}<a
             href="{{ path('app_tag_list') }}">{% endif %}
           {{ 'dashboard.tag-count'|trans({'%count%': tagCount}) }}
-          {% if is_granted("STUDYAREA_OWNER", _twigStudyArea) and tagCount > 0 %}</a>{% endif %}
+          {% if tagCount > 0 %}</a>{% endif %}
       </li>
     {% endif %}
     {% if not studyArea.openAccess or relationCount > 0 %}
