--- a/templates/abbreviation/list.html.twig
+++ b/templates/abbreviation/list.html.twig
@@ -29,8 +29,8 @@
     <tbody>
     {% for abbreviation in abbreviations %}
       <tr>
-        <td>{{ abbreviation.abbreviation }}</td>
-        <td>{{ abbreviation.meaning }}</td>
+        <td>{{ abbreviation.abbreviation | u.truncate(22, '...') }}</td>
+        <td>{{ abbreviation.meaning | u.truncate(252, '...') }}</td>
         {% if is_granted('STUDYAREA_EDIT', studyArea) %}
           <td class="actions">
             {{ buttons.edit_button_disabled_when_frozen(path('app_abbreviation_edit', {abbreviation: abbreviation.id})) }}
