added anchor to logo image to open a new tab to UCGIS main site

--- a/templates/default/landing.html.twig
+++ b/templates/default/landing.html.twig
@@ -7,7 +7,9 @@
 {% block card_title %}
   <div class="row d-flex align-items-center w-75 m-auto text-center full-height">
     <div class="col-12 col-md-auto md-3 mb-md-0 d-flex justify-content-center">
-      <img src="{{ asset('img/ucgis-horizontal.png') }}" class="logo" alt="UCGIS logo"/>
+      <a href="https://www.ucgis.org/" target="_blank">
+        <img src="{{ asset('img/ucgis-horizontal.png') }}" class="logo" alt="UCGIS logo"/>
+      </a>
     </div>
     <div class="col-12 col-md">
       <h1>
