navebar-logo class used UCGIS logo; added menu.brand translation key;

--- a/templates/_layout/menu.html.twig
+++ b/templates/_layout/menu.html.twig
@@ -47,7 +47,7 @@
     <div class="navbar-brand"
          {% if _twigStudyArea is not empty %}data-toggle="tooltip"
          title="{{ 'study-area.current-area'|trans({'%item%': _twigStudyArea.name}) }}"{% endif %}>
-      Living Textbook
+      {{ 'menu.brand'|trans }}
     </div>
   </a>
 
