--- a/templates/default/landing.html.twig
+++ b/templates/default/landing.html.twig
@@ -15,7 +15,7 @@
       <h1>
         {{ 'app.welcome' | trans }}
       </h1>
-      <h1>Body of Knowledge (Bok)</h1>
+      <h1>{{ 'menu.brand'|trans }} (BoK)</h1>
     </div>
 
   </div>
