--- a/assets/css/content/_styleGuide.scss
+++ b/assets/css/content/_styleGuide.scss
@@ -47,11 +47,12 @@
   // Headers
   h3, .h3,
   h4, .h4 {
-    margin-bottom: 0;
+    margin-bottom: 0.5rem;
   }
 
   // Header 1
-  h3, .h3 {
+  h3, .h3,
+  h3 a, .h3 a{
     font-size: 1.25rem;
     line-height: 1.5rem;
     font-weight: bold;
@@ -59,7 +60,8 @@
   }
 
   // Header 2
-  h4, .h4 {
+  h4, .h4,
+  h4 a, .h4 a{
     font-style: italic;
   }
 
@@ -144,7 +146,7 @@
       display: inline-block;
 
       img {
-        border: 1px solid $body-color;
+        //border: 1px solid $body-color;
         vertical-align: top;
         max-width: 100%;
         max-height: 80vh;
