Added UCGIS branding to header and footer

--- a/templates/concept_print/base/concept_print.tex.twig
+++ b/templates/concept_print/base/concept_print.tex.twig
@@ -51,6 +51,8 @@
 
   % Set up the header and footer
   \pagestyle{fancy}
+  \fancyhf{}
+  \fancyhead[R]{ {{- head -}} }
   \fancyhead[L]{}
   \fancyhead[C]{}
   \fancyfoot[L]{ \includegraphics[width=30px,keepaspectratio,valign=c]{ {{- footerimage|raw -}} } \hspace{0.5em} \textbf{UCGIS GIS\&T Body of Knowledge} | \emph{www.ucgis.org} }
