configured special characters; added support for unicode greek and math symbols; parse greek letters;

--- a/templates/concept_print/base/concept_print.tex.twig
+++ b/templates/concept_print/base/concept_print.tex.twig
@@ -101,6 +101,55 @@
   \DeclareUnicodeCharacter{03B8}{}
   \DeclareUnicodeCharacter{FB01}{fi}
   \DeclareUnicodeCharacter{2011}{-}
+  \DeclareUnicodeCharacter{0391}{$A$}
+  \DeclareUnicodeCharacter{0392}{$B$}
+  \DeclareUnicodeCharacter{0395}{$E$}
+  \DeclareUnicodeCharacter{0396}{$Z$}
+  \DeclareUnicodeCharacter{0397}{$H$}
+  \DeclareUnicodeCharacter{0399}{$I$}
+  \DeclareUnicodeCharacter{039A}{$K$}
+  \DeclareUnicodeCharacter{039C}{$M$}
+  \DeclareUnicodeCharacter{039D}{$N$}
+  \DeclareUnicodeCharacter{039F}{$O$}
+  \DeclareUnicodeCharacter{03A1}{$P$}
+  \DeclareUnicodeCharacter{03A4}{$T$}
+  \DeclareUnicodeCharacter{03A7}{$X$}
+  \DeclareUnicodeCharacter{2200}{$\forall$}
+  \DeclareUnicodeCharacter{2202}{$\partial$}
+  \DeclareUnicodeCharacter{2203}{$\exists$}
+  \DeclareUnicodeCharacter{2205}{$\emptyset$}
+  \DeclareUnicodeCharacter{2207}{$\nabla$}
+  \DeclareUnicodeCharacter{2208}{$\in$}
+  \DeclareUnicodeCharacter{2209}{$\notin$}
+  \DeclareUnicodeCharacter{220B}{$\ni$}
+  \DeclareUnicodeCharacter{220F}{$\prod$}
+  \DeclareUnicodeCharacter{2211}{$\sum$}
+  \DeclareUnicodeCharacter{221A}{$\sqrt{}$}
+  \DeclareUnicodeCharacter{221D}{$\propto$}
+  \DeclareUnicodeCharacter{221E}{$\infty$}
+  \DeclareUnicodeCharacter{2220}{$\angle$}
+  \DeclareUnicodeCharacter{2227}{$\land$}
+  \DeclareUnicodeCharacter{2228}{$\lor$}
+  \DeclareUnicodeCharacter{2229}{$\cap$}
+  \DeclareUnicodeCharacter{222A}{$\cup$}
+  \DeclareUnicodeCharacter{222B}{$\int$}
+  \DeclareUnicodeCharacter{2234}{$\therefore$}
+  \DeclareUnicodeCharacter{223C}{$\sim$}
+  \DeclareUnicodeCharacter{2245}{$\cong$}
+  \DeclareUnicodeCharacter{2248}{$\approx$}
+  \DeclareUnicodeCharacter{2260}{$\neq$}
+  \DeclareUnicodeCharacter{2261}{$\equiv$}
+  \DeclareUnicodeCharacter{2264}{$\leq$}
+  \DeclareUnicodeCharacter{2265}{$\geq$}
+  \DeclareUnicodeCharacter{2282}{$\subset$}
+  \DeclareUnicodeCharacter{2283}{$\supset$}
+  \DeclareUnicodeCharacter{2284}{$\nsubseteq$}
+  \DeclareUnicodeCharacter{2285}{$\nsupseteq$}
+  \DeclareUnicodeCharacter{2286}{$\subseteq$}
+  \DeclareUnicodeCharacter{2287}{$\supseteq$}
+  \DeclareUnicodeCharacter{2295}{$\oplus$}
+  \DeclareUnicodeCharacter{2297}{$\otimes$}
+  \DeclareUnicodeCharacter{22A5}{$\bot$}
 
   {{ include('@BobvLatex/extra_commands.twig.twig') }}
 
